<resources>
    <string name="app_label">News Minute</string>
    <string name="app_welcomemsg">Welcome to News Minute</string>
    <string name="app_shortdescription">The app that organizes news from all your favourite sources!</string>
    <string name="app_longdescription">News Minute monitors information from a variety of sources.  Unlike other news apps, news minute monitors targeted news media constantly and notifies you only when news you have identified as relevant occurs.</string>
    <string name="app_longdescription_old">Organizes news from all your favourite sources; and yes, including blogs, video and ahem gossip sites.</string>
    <string name="app_reason">News Minute helps:\n\nUsers monitor specific topic(s) like \'boko haram\', \'p-square\', \'chelsea fc\' etc.\n\nPress officers monitor their principal\'s mention in the news.\n\nCelebrities, socialites, bloggers, fans and wannabes alike monitor society gossip and news.\n\nNews media outfits monitor breaking news.</string>
    <string name="app_reason_old">Be the first to know: when a bomb blast goes off, your boss\' name is mentioned in any news media or your candidate wins an election</string>
    <string name="msg_select_subscription">Select subscription to activate</string>
    <string name="msg_1month_subscription_s">1 Month Subscription NGN%1$s</string>
    <string name="msg_3months_subscription_s">3 Months Subscription NGN%1$s</string>
    <string name="msg_6months_subscription_s">6 Months Subscription NGN%1$s</string>
    <string name="msg_12months_subscription_s">12 Months Subscription NGN%1$s</string>
    <string name="msg_countries_and_capitals">Countries and Capitals</string>
    <string name="msg_iso2_to_iso3_countrycodes">Iso2 to Iso3 Country Codes</string>
    <string name="msg_nigerian_states_and_capitals">Nigerian States and Capitals</string>
    <string name="msg_english_proverbs">English Proverbs</string>
    <string name="msg_hausa_proverbs">Hausa Proverbs</string>
    <string name="msg_igbo_proverbs">Igbo Proverbs</string>
    <string name="msg_yoruba_proverbs">Yoruba Proverbs</string>
    <string name="msg_profile">Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="msg_screenname">Screen name</string>
    <string name="msg_country">Country</string>
    <string name="msg_gender">Gender</string>
    <string name="msg_screenname_reason">Name others will see you as</string>
    <string name="msg_go">Go</string>
    <string name="msg_installation_successful">Installation successful</string>
    <string name="msg_screenname_exists">Name already exists</string>
    <string name="msg_readfullstory">Read full story</string>
    <string name="msg_browsefullstory">Browse Full Story</string>
    <string name="msg_readlater">Read Later</string>
    <string name="msg_s_replied">%1$s replied to your comment</string>
    <string name="msg_d_repliestoyourcomment">%1$d replies to your comment</string>
    <string name="msg_s_and_d_othersreplied">%1$s and %2$d others replied to your comment</string>
    <string name="msg_d_repliesto_d_ofyourcomments">%1$d replies to %2$d of your comment(s)</string>
    <string name="msg_s_alreadytaken">%1$s already taken</string>
    <string name="msg_activationsuccess">Activation successful</string>
    <string name="msg_selectwhattoview">Select what to view</string>
    <string name="msg_defaultnoticetext">%1$s</string>
    <string name="msg_subscriptionmonths_d">You have %1$d months free subscription</string>
    <string name="msg_trythisapp">Hi, I\'m loving the %1$s app. I have customized the app to receive only headlines, sports and entertainment news from over %2$d different websites, blogs and feeds.\n\nDownload the app here:\n\n%3$s</string>
    <string name="msg_forumicon">Forum icon</string>
    <string name="msg_share_subject_guest">New message</string>
    <string name="msg_share_subject_user">New message from %1$s</string>
    <string name="msg_delete">Delete?</string>
    <string name="msg_deleteall_s">Delete all %1$s?</string>
    <string name="msg_deleted">Deleted</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard</string>
    <string name="msg_highlights">Highlights</string>
    <string name="notice_title">News Update</string>
    <string name="fmt_sent_invitations" formatted="false">Sent %d invitations</string>
    <string name="err_required_s">Required: %1$s</string>
    <string name="err_not_found_s">Not found: %1$s</string>
    <string name="err_error_displaying_s">Error displaying: %1$s</string>
    <string name="err_invalid_link_s">Invalid link: %1$s</string>
    <string name="err_nothingselected">Nothing selected</string>
    <string name="err_loadingcomments">Error downloading comments</string>
    <string name="err_uploadingcomments">Error updownloading comments</string>
    <string name="err_loadingfeeds">Error downloading news feeds</string>
    <string name="err_updatinghitcount">Error updating hitcount</string>
    <string name="err_loading_userdetails">Error loading user details</string>
    <string name="err_loading_userpreferences">Error loading user preferences</string>
    <string name="err_requestpassword">Request Password Error</string>
    <string name="err_signup">Signup Error</string>
    <string name="err_syncing">Error syncing %1$s</string>
    <string name="err_loading">Error loading %1$s</string>
    <string name="err_relaunch_app">Apologies for any inconveniences. Please re-launch %1$s in %2$d minutes. Thanks.</string>
    <string name="err_google_play_services">Google Play Services Error</string>
    <string name="err_sending_invitation">Invitations not sent</string>
    <string name="msg_sources">Sources</string>
    <string name="msg_bookmarks">Bookmarks</string>
    <string name="msg_favorites">Favorites</string>
    <string name="msg_addedtofavorites">Added to favorites</string>
    <string name="msg_bookmarked">Bookmarked</string>
    <string name="msg_search">Search</string>
    <string name="msg_searchnews">Search News</string>
    <string name="msg_more">More</string>
    <string name="msg_settings">Settings</string>
    <string name="msg_userprofile">User profile</string>
    <string name="msg_invite">Invite Friends</string>
    <string name="msg_clicktoinvite">Click the button bellow to invite friends.</string>
    <string name="msg_about">About</string>
    <string name="msg_share">Share</string>
    <string name="msg_linkup">Linkup with friends</string>
    <string name="msg_billing">Billing</string>
    <string name="msg_stop_adverts">Stop showing adverts</string>
    <string name="msg_no_more_adverts">Say goodbye to unwanted adverts</string>
    <string name="invitation_message">I\'m loving this app. Give it a try.</string>
    <string name="invitation_cta">Install</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="deep_link_default">[No Link Provided]</string>
    <string name="invitation_received_logo">Invitation received logo</string>
    <string name="fmt_deep_link" formatted="false">Deep Link: %s</string>
    <string name="fmt_invitation_id" formatted="false">Invitation ID: %s</string>
    <string name="fmt_message_suffix">\n\nSent from %1$s android app</string>
    <string name="msg_signupsuccess">Signup successful. Please check your email inbox/spam folder for an email from %1$s for instructions to activate your account</string>
    <string name="msg_invitation_received">You got an invitation!</string>
    <string name="msg_advert">Advert</string>
    <string name="msg_info">Info</string>
    <string name="msg_pleasewait"> &#8230;Please wait</string>
    <string name="msg_nofeedsforcategories">No current feeds for selected category(s)</string>
    <string name="msg_youhaveno_s">You have no %s</string>
    <string name="msg_selectinfo">Select Information to Display</string>
    <string name="msg_selectsources">Select Sources</string>
    <string name="msg_selectcategories">Select Categories</string>
    <string name="msg_categories">Categories</string>
    <string name="msg_all">All</string>
    <string name="msg_business">Business</string>
    <string name="msg_entertainment">Entertainment</string>
    <string name="msg_headlines">Headlines</string>
    <string name="msg_international">International</string>
    <string name="msg_national">National</string>
    <string name="msg_politics">Politics</string>
    <string name="msg_religion">Religion</string>
    <string name="msg_sports">Sports</string>
    <string name="msg_technology">Technology</string>
    <string name="msg_searchresults">Search Results</string>
    <string name="msg_developer">Developer</string>
    <string name="msg_signingup"> &#8230;Signing up</string>
    <string name="msg_loggingin"> &#8230;Logging in</string>
    <string name="msg_loggingout"> &#8230;Logging out</string>
    <string name="msg_ok">OK</string>
    <string name="msg_submit">Submit</string>
    <string name="msg_login">Login</string>
    <string name="msg_logout">Logout</string>
    <string name="msg_signup">Signup</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msg_acceptimage">Accept Image</string>
    <string name="msg_forgotpassword">Forgot password</string>
    <string name="msg_activate">Activate subscription</string>
    <string name="msg_subscribe">Subscribe (Recommended)</string>
    <string name="msg_skip">Skip</string>
    <string name="msg_continue">Continue</string>
    <string name="msg_signup_reason">You need this to make comments etc</string>
    <string name="msg_enter_email">Enter email address</string>
    <string name="msg_enter_username">Enter username</string>
    <string name="msg_enter_password">Enter password</string>
    <string name="msg_enter_activation">Enter activation code</string>
    <string name="msg_enter_url">Enter URL</string>
    <string name="msg_already_loggedin">You are already logged in</string>
    <string name="msg_already_loggedout">You are already logged out</string>
    <string name="msg_icon">Icon</string>
    <string name="msg_gotosource">Go to source</string>
    <string name="msg_nofeed">No feed available</string>
    <string name="msg_nolink">No external link</string>
    <string name="msg_loading"> &#8230;Loading</string>
    <string name="msg_loadingcomments"> &#8230;Loading comments</string>
    <string name="msg_loadingnewer"> &#8230;Loading newer</string>
    <string name="msg_loadingolder"> &#8230;Loading older</string>
    <string name="msg_searchingfeeds"> &#8230;Searching feeds</string>
    <string name="msg_loadmoreresults">Load more results</string>
    <string name="msg_done">Done</string>
    <string name="msg_nosearchresult">0 Search results</string>
    <string name="msg_newfeedsnotice">Fresh news available. Move up to view</string>
    <string name="msg_agree">Agree</string>
    <string name="pref_syncinterval_id">pref_syncinterval</string>
    <string name="pref_syncinterval_title">News update interval</string>
    <string name="pref_syncinterval_summary">How often news is updated</string>
    <string name="pref_syncinterval_dialogtitle">Select sync interval</string>
    <string name="pref_syncinterval_defaultvalue">30</string>
    <string name="pref_autosearch_id">pref_autosearchtext</string>
    <string name="pref_autosearch_title">Words to be notified of</string>
    <string name="pref_autosearch_summary">Comma separated list of words</string>
    <string name="pref_autosearch_dialogtitle">Enter words to be notified of</string>
    <string name="pref_autosearch_defaultvalue">breaking, b r e a k i n g, b-r-e-a-k-i-n-g</string>
    <string name="pref_disablevibration_id">pref_disablevibration</string>
    <string name="pref_disablevibration_title">Disable Vibration</string>
    <string name="pref_disablevibration_summary">Check this to disable vibration</string>
</resources>