<!--

app:actionViewClass="android.support.v7.widget.SearchView"
button opened search box but search box not responding
MenuItemCompat.getActionView(menuItem) returned null

android:actionViewClass="android.support.v7.widget.SearchView"
??? ??? ???

app:actionViewClass="android.widget.SearchView"
button opened search box but search box not responding
MenuItemCompat.getActionView(menuItem) returned a SearchView

android:actionViewClass="android.widget.SearchView"
button did not open search box

@see https://guides.codepath.com/android/Migrating-to-the-AppCompat-Library

-->
<menu
    xmlns:app="http://schemas.android.com/tools"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/main_actions_search"
          android:icon="@drawable/ic_search_black_24dp"
          android:title="@string/msg_searchnews"
          appcompat:showAsAction="always|collapseActionView"
          appcompat:actionViewClass="android.support.v7.widget.SearchView"
          android:orderInCategory="100"/>
    <item android:id="@+id/main_actions_settings"
          android:icon="@drawable/ic_settings_black_24dp"
          android:title="@string/msg_settings"
          app:showAsAction="ifRoom"
          android:orderInCategory="200"
    />
    <item android:id="@+id/main_actions_share"
          android:icon="@drawable/ic_share_black_24dp"
          android:title="@string/msg_share"
          app:showAsAction="ifRoom"
          android:orderInCategory="300"
    />
    <item android:id="@+id/main_actions_invite"
        android:icon="@drawable/ic_group_add_black_24dp"
        android:title="@string/msg_invite"
        app:showAsAction="ifRoom"
        android:orderInCategory="400"
        />
    <item android:id="@+id/main_actions_login"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/msg_login"
        android:orderInCategory="500"
    />
    <item android:id="@+id/main_actions_signup"
          android:icon="@drawable/ic_account_circle_black_24dp"
          android:title="@string/msg_signup"
          android:orderInCategory="600"
    />
    <item android:id="@+id/main_actions_activate"
          android:icon="@drawable/ic_account_circle_black_24dp"
          android:title="@string/msg_subscribe"
          android:orderInCategory="700"
    />
    <item android:id="@+id/main_actions_forgotpassword"
          android:icon="@drawable/ic_account_circle_black_24dp"
          android:title="@string/msg_forgotpassword"
          android:orderInCategory="800"
    />
    <item android:id="@+id/main_actions_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/msg_about"
        android:orderInCategory="900"
        />
    <item android:id="@+id/main_actions_developer"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/msg_developer"
        android:orderInCategory="1000"
        />
</menu>