<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/welome_banner"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/background_top"
        android:contentDescription="@string/app_welcomemsg"/>
    <TextView
        android:id="@+id/welome_textview0"
        android:textSize="@dimen/subtitle_text_size_large"
        android:textColor="@color/black"
        android:paddingTop="@dimen/space_xlarge"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_welcomemsg"
        android:scrollHorizontally="false"/>
    <TextView
        android:id="@+id/welome_textview1"
        android:textSize="@dimen/text_size"
        android:paddingBottom="@dimen/space_xlarge"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_shortdescription"
        android:scrollHorizontally="false"/>
    <EditText
        android:id="@+id/welcome_screenname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:hint="@string/msg_enter_username"/>
    <TextView
        android:textSize="@dimen/subtitle_text_size"
        android:id="@+id/welcome_progresstext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:text="@string/msg_screenname_reason"/>
    <RadioGroup
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/space_xlarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/welcome_radio_male"
            android:textSize="@dimen/subtitle_text_size"
            android:paddingRight="@dimen/space_xxlarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />
        <RadioButton
            android:id="@+id/welcome_radio_female"
            android:textSize="@dimen/subtitle_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>
    <TextView
        android:id="@+id/welome_textview2"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/color_4"
        android:gravity="center"
        android:padding="@dimen/space_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_subscriptionmonths_d"
        android:scrollHorizontally="false"/>
    <Button
        android:id="@+id/welcome_agreebutton"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_agree" />
    <ImageView
        android:id="@+id/welome_earth"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/background_bottom"
        android:layout_weight="1.0"
        android:contentDescription="@string/app_welcomemsg"/>
</LinearLayout>
