<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/userprofile_screenname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:hint="@string/msg_enter_username"/>
    <TextView
        android:id="@+id/userprofile_screenname_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_text_size"
        android:layout_marginBottom="@dimen/space_small"
        android:text="@string/msg_screenname_reason"/>
    <RadioGroup
        android:id="@+id/userprofile_radio_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/space_xlarge">
        <RadioButton
            android:id="@+id/userprofile_radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/subtitle_text_size"
            android:paddingRight="@dimen/space_xxlarge"
            android:text="@string/male" />
        <RadioButton
            android:id="@+id/userprofile_radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/subtitle_text_size"
            android:text="@string/female"/>
    </RadioGroup>
</LinearLayout>
