<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inapppurchase_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/inapppurchase_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_select_subscription"
            android:textSize="@dimen/subtitle_text_size"
            android:layout_margin="@dimen/space_small"
            android:paddingTop="@dimen/space_large"
            android:paddingBottom="@dimen/space_large"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:lines="1"
            android:minLines="1"
            android:maxLines="2"
            />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/inapppurchase_button_12months"
                android:text="@string/msg_12months_subscription_s"
                android:textSize="@dimen/subtitle_text_size"
                android:layout_margin="@dimen/space_small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/inapppurchase_button_6months"
                android:text="@string/msg_6months_subscription_s"
                android:textSize="@dimen/subtitle_text_size"
                android:layout_margin="@dimen/space_small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/inapppurchase_button_3months"
                android:text="@string/msg_3months_subscription_s"
                android:textSize="@dimen/subtitle_text_size"
                android:layout_margin="@dimen/space_small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/inapppurchase_button_1month"
                android:text="@string/msg_1month_subscription_s"
                android:textSize="@dimen/subtitle_text_size"
                android:layout_margin="@dimen/space_small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>
        <TextView
            android:id="@+id/inapppurchase_notice1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/title_text_size_large"
            android:layout_margin="@dimen/space_small"
            android:text="@string/msg_no_more_adverts"/>
        <Button
            android:id="@+id/inapppurchase_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/subtitle_text_size_large"
            android:layout_margin="@dimen/space_small"
            android:text="@string/msg_ok"
            style="@style/ButtonAppTheme"/>

    </LinearLayout>
</ScrollView>
