<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/ViewGroupAppTheme">
    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_login"
        android:layout_marginBottom="@dimen/space_small"
        android:layout_gravity="center_horizontal"
        style="@style/TextViewAppTheme"/>
    <EditText
        android:id="@+id/login_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:hint="@string/msg_enter_email"
        android:layout_gravity="top"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_enter_password"
        android:layout_marginBottom="@dimen/space_small"
        android:layout_gravity="top"
        android:inputType="textPassword"/>
        <Button
            android:id="@+id/login_okbutton"
            android:layout_gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:text="@string/msg_login"/>
        <Button
            android:id="@+id/login_skipbutton"
            android:layout_gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_skip"/>
</LinearLayout>

